WIP for #967
